alignment fixed

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,3 +6,10 @@ body {
   background-color: #464646;
   background-image: url("./images/Background.png");
 }
+
+.container {
+  padding: 0px;
+
+  position: fixed;
+
+}
